--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,6 @@ html {
 
 ::-webkit-scrollbar-track {
     background-color: var(--green-color);
-    border-radius: 50px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -147,12 +146,13 @@ img {
     margin-bottom: 30px;
 }
 
-
 /* SITE-HEADER */
 .site-header {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: rgba(0, 0, 0, 0.05);
+    padding-top: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    z-index: 888;
+    width: 100%;
 }
 
 .site-header__container {
@@ -160,7 +160,7 @@ img {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 15px;
 }
 
 .site-header__inner {
@@ -185,8 +185,8 @@ img {
 .site-header__title {
     text-transform: uppercase;
     margin: 0;
-    color: var(--text-color);
-    font-weight: 500;
+    color: var(--bg-color);
+    font-weight: 600;
     font-size: 30px;
     line-height: normal;
 }
@@ -197,7 +197,7 @@ img {
     height: 25px;
     display: none;
     flex-shrink: 0;
-    color: var(--text-color);
+    color: var(--bg-color);
 }
 
 /* SITENAV */
@@ -225,7 +225,7 @@ img {
     display: flex;
     align-items: center;
     gap: 10px;
-    color: var(--text-color);
+    color: var(--bg-color);
     transition: color 0.3s ease;
     position: relative;
     margin-bottom: 20px;
@@ -431,6 +431,16 @@ img {
     max-width: 100vw;
     padding-left: 0;
     padding-right: 0;
+}
+
+.hero__carousel {
+    min-height: 350px;
+    height: 100vh;
+    width: 100%;
+    background-image: url("../img/abc.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 
@@ -823,7 +833,7 @@ img {
     display: flex;
     align-items: center;
     gap: 20px;
-    overflow-x: scroll;
+    overflow-x: hidden;
 }
 
 .partner__item {
@@ -1005,6 +1015,11 @@ img {
 /* 1100PX */
 @media only screen and (max-width: 1100px) {
     /* HEADER */
+    .site-header {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    
     .sitenav__list {
         display: none;
     }
@@ -1077,6 +1092,13 @@ img {
     .partner__heading,
     .maps__heading {
         font-size: 35px;
+    }
+}
+
+/* 640PX */
+@media only screen and (max-width: 640px) {
+    .hero__carousel {
+        height: 40vh;
     }
 }
 
@@ -1166,10 +1188,6 @@ img {
 
 /* 375PX */
 @media only screen and (max-width: 375px) {
-    .site-header__title {
-        font-size: 14px;
-    }
-    
     /* OFFER */
     .offer__text {
         font-size: 20px;
@@ -1228,5 +1246,3 @@ img {
         font-size: 30px;
     }
 }
-
-
