--- a/css/main.css
+++ b/css/main.css
@@ -652,6 +652,12 @@ img {
     transition: opacity 0.3s ease;
 }
 
+.pictures__img {
+    display: block;
+    width: 350px;
+    height: 250px;;
+}
+
 .pictures__item:hover {
     opacity: 0.8;
 }
@@ -803,6 +809,7 @@ img {
     display: inline-block;
     color: var(--blue-color);
 }
+
 .wrapper-news__text {
     margin: 0;
     color: var(--text-color);
@@ -820,33 +827,60 @@ img {
 
 
 /* PARTNER */
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-250px * 6));
+    }
+}
+
 .partner {
-    padding-bottom: 50px;
-    padding-top: 50px;
     background-color: #fff;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.partner__wrapper {
+    background: white;
+    height: 200px;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
+    width: 1200px;
+    height: 100%;
+}
+
+.partner__wrapper::before,
+.partner__wrapper::after {
+    background: linear-gradient(to right, white 0%, rgba(255, 255, 255, 0) 100%);
+    content: "";
+    height: 200px;
+    position: absolute;
+    width: 200px;
+    z-index: 2;
+}
+
+.partner__wrapper::after {
+    right: 0;
+    top: 0;
+    transform: rotateZ(180deg);
+}
+
+.partner__wrapper::before {
+    left: 0;
+    top: 0;
 }
 
 .partner__list {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+    animation: scroll 60s linear infinite;
     display: flex;
     align-items: center;
-    gap: 20px;
-    overflow-x: hidden;
-}
-
-.partner__item {
-    flex-shrink: 0;
-}
-
-.partner__link {
-    text-decoration: none;
-    display: inline-block;
-}
-
-.partner__img {
-    display: block;
+    gap: 100px;
+    width: calc(250px * 12);
+    list-style: none;
+    margin: 0;
 }
 
 
@@ -854,6 +888,7 @@ img {
 .maps {
     padding-top: 100px;
     width: 100vw;
+    background-color: #fde293;
 }
 
 .maps__container {
