--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,56 @@ img {
     }
 }
 
+/* MESSAGE */
+.pulse {
+    height: 5rem;
+    width: 5rem;
+    background: linear-gradient(#65c0e7, #22a5dd);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    font-size: 2rem;
+    color: #e4ded2;
+    z-index: 98;
+}
+
+.pulse::before,
+.pulse::after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: #65c0e7;
+    border-radius: 50%;
+    z-index: -1;
+    opacity: 0.7;
+}
+
+.pulse::before {
+    animation: pulse 2s ease-out infinite;
+}
+
+.pulse::after {
+    animation: pulse 2s 1s ease-out infinite;
+}
+
+@keyframes pulse {
+    100% {
+        transform: scale(2.5);
+        opacity: 0;
+    }
+}
+
+.pulse__icon {
+    display: block;
+    width: 4rem;
+    height: 4rem;
+}
+
 /* MAIN-CONTENT */
 .main-content {
     flex-grow: 1;
@@ -146,12 +196,13 @@ img {
     margin-bottom: 30px;
 }
 
+
 /* SITE-HEADER */
 .site-header {
     padding-top: 10px;
     background-color: rgba(0, 0, 0, 0.7);
     position: fixed;
-    z-index: 888;
+    z-index: 100;
     width: 100%;
 }
 
@@ -272,7 +323,7 @@ img {
     list-style: none;
     width: max-content;
     position: absolute;
-    z-index: 50;
+    z-index: 90;
     display: none;
 }
 
@@ -312,7 +363,7 @@ img {
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 999;
+    z-index: 110;
     top: 0px;
     left: 0px;
     transform: translateX(-100%);
@@ -437,7 +488,7 @@ img {
     min-height: 350px;
     height: 100vh;
     width: 100%;
-    background-image: url("../img/abc.jpg");
+    background-image: url("../img/main/demo-img.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -652,12 +703,6 @@ img {
     overflow: hidden;
     border-radius: 5px;
     transition: opacity 0.3s ease;
-}
-
-.pictures__img {
-    display: block;
-    width: 350px;
-    height: 250px;;
 }
 
 .pictures__item:hover {
@@ -1055,6 +1100,14 @@ img {
 }
 
 /* MEDIA-QUERIES */
+/* 1250PX */
+@media only screen and (max-width: 1250px) {
+    .partner__wrapper::before,
+    .partner__wrapper::after {
+        display: none;
+    }
+}
+
 /* 1100PX */
 @media only screen and (max-width: 1100px) {
     /* HEADER */
@@ -1182,6 +1235,18 @@ img {
     /* OFFER */
     .offer__text {
         font-size: 30px;
+    }
+
+    .pulse {
+        width: 4rem;
+        height: 4rem;
+        right: 15px;
+        bottom: 15px;
+    }
+
+    .pulse__icon {
+        width: 3rem;
+        height: 3rem;
     }
 }
 
