--- a/css/main.css
+++ b/css/main.css
@@ -875,7 +875,19 @@ img {
 
 /* TSS */
 .tss {
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: var(--green-color);
+    color: #fff;
+}
+
+.tss__paragraph {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: normal;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 .accordion-button:focus {
