--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ html {
 }
 
 *:focus {
-    outline: 2px dashed var(--green-color);
+    outline: 2px dashed transparent;
     outline-offset: 2px;
 }
 
@@ -203,10 +203,15 @@ img {
 /* SITE-HEADER */
 .site-header {
     padding-top: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.2);
     position: fixed;
     z-index: 100;
     width: 100%;
+    transition: background-color 0.3s ease, height 0.3s ease;
+}
+
+.site-header__background {
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .site-header__container {
@@ -499,14 +504,27 @@ img {
     padding-right: 0;
 }
 
-.hero__carousel {
+.carousel-one,
+.carousel-two,
+.carousel-three {
     min-height: 350px;
     height: 100vh;
     width: 100%;
-    background-image: url("../img/main/demo-img.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+}
+
+.carousel-one {
+    background-image: url("../img/main/college.jpg");
+}
+
+.carousel-two {
+    background-image: url("../img/main/library.jpg");
+}
+
+.carousel-three {
+    background-image: url("../img/main/chemistry-room.jpg");
 }
 
 
@@ -866,7 +884,7 @@ img {
     border-color: var(--blue-color);
 }
 
-.wrapper-news__icon {
+.wrapper-news__date {
     text-decoration: underline;
     display: inline-block;
     color: var(--blue-color);
@@ -875,6 +893,13 @@ img {
 .wrapper-news__text {
     margin: 0;
     color: var(--text-color);
+    margin-bottom: 5px;
+}
+
+.wrapper-news__title {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 20px;
 }
 
 
@@ -1129,6 +1154,37 @@ img {
     flex-shrink: 0;
 }
 
+
+/* NEWS-PAGE */
+.news-page {
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+
+.news-page__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.item-page__img {
+    width: 800px;
+    height: 400px;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+
+.item-page__heading {
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.item-page__date {
+    font-weight: 500;
+}
+
 /* MEDIA-QUERIES */
 /* 1250PX */
 @media only screen and (max-width: 1250px) {
@@ -1284,6 +1340,16 @@ img {
     .pulse__icon {
         width: 3rem;
         height: 3rem;
+    }
+
+    /* NEWS-PAGE */
+    .news-page {
+        padding-top: 75px;
+        padding-bottom: 50px;
+    }
+
+    .item-page__img {
+        height: 300px;
     }
 }
 
