--- a/css/main.css
+++ b/css/main.css
@@ -516,15 +516,15 @@ img {
 }
 
 .carousel-one {
-    background-image: url("../img/main/college.jpg");
+    background-image: url("https://i.postimg.cc/65kw0QF6/college.jpg");
 }
 
 .carousel-two {
-    background-image: url("../img/main/library.jpg");
+    background-image: url("https://i.postimg.cc/fWgMVCK9/chemistry-room.jpg");
 }
 
 .carousel-three {
-    background-image: url("../img/main/chemistry-room.jpg");
+    background-image: url("https://i.postimg.cc/KvkxBTqs/library.jpg");
 }
 
 
