--- a/css/main.css
+++ b/css/main.css
@@ -858,6 +858,7 @@ img {
     align-items: flex-start;
     justify-content: space-around;
     width: 100%;
+    gap: 15px;
 }
 
 .news__carousel {
@@ -871,6 +872,7 @@ img {
 
 .wrapper-news__list {
     width: 45%;
+    flex-grow: 1;
 }
 
 .wrapper-news__item:not(:last-child) {
@@ -882,7 +884,8 @@ img {
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
-    display: block;
+    display: flex;
+    align-items: center;
     transition: border-color 0.3s ease;
 }
 
@@ -890,22 +893,40 @@ img {
     border-color: var(--blue-color);
 }
 
+.wrapper-news__img {
+    margin-right: 10px;
+    height: 135px;
+    width: 160px;
+    border-radius: 5px;
+}
+
+.wrapper-news__content {
+    width: 100%;
+}
+
 .wrapper-news__date {
     text-decoration: underline;
-    display: inline-block;
+    display: block;
     color: var(--blue-color);
+    float: right;
 }
 
 .wrapper-news__text {
     margin: 0;
     color: var(--text-color);
     margin-bottom: 5px;
+    max-width: 437px;
+    max-height: 72px;
+    overflow-y: hidden;
 }
 
 .wrapper-news__title {
     margin-top: 0;
     margin-bottom: 10px;
     font-size: 20px;
+    max-width: 437px;
+    max-height: 24px;
+    overflow: hidden;
 }
 
 
@@ -1376,6 +1397,10 @@ img {
     .pulse__icon {
         width: 3rem;
         height: 3rem;
+    }
+
+    .wrapper-news__img {
+        display: none;
     }
     
     /* NEWS-PAGE */
